--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "homepage": "https://github.com/clusterberries/neighborhoods#readme",
   "dependencies": {
     "backbone": "^1.3.3",
+    "backbone.localstorage": "^1.1.16",
     "jquery": "^3.1.1",
     "reset-css": "^2.2.0"
   },
